# ai-platform-yolov8

./: CMakeLists.txt  yolov8-repo.sln  yolov8-repo.vcxproj  yolov8-repo.vcxproj.filters
utils/: utils.cpp  utils.h  yolo.cpp
yolov8/: app_yolov8.cpp  yolov8.cpp
